--- a/soccer/soccer_backend/pom.xml
+++ b/soccer/soccer_backend/pom.xml
@@ -81,6 +81,12 @@
             <version>1.2.47</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.shiro</groupId>
+            <artifactId>shiro-spring</artifactId>
+            <version>1.4.0</version>
+        </dependency>
+
     </dependencies>
 
     <build>
