--- a/soccer/soccer_backend/src/main/resources/application.yml
+++ b/soccer/soccer_backend/src/main/resources/application.yml
@@ -46,3 +46,7 @@ mybatis:
 mapper:
   mappers: com.chaosquark.backend.common.tkmapper.MyTkMapper
   identity: MYSQL
+
+shiro:
+  hashAlgorithmName: md5
+  hashIterations: 3
