--- a/soccer/soccer_backend/pom.xml
+++ b/soccer/soccer_backend/pom.xml
@@ -87,6 +87,11 @@
             <version>1.4.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.5.5</version>
+        </dependency>
     </dependencies>
 
     <build>
